Fix ribbon on mobile.

--- a/src/components/Ribbon.module.css
+++ b/src/components/Ribbon.module.css
@@ -26,3 +26,9 @@
   text-align: center;
   letter-spacing: 2px;
 }
+
+@media (max-width: 768px) {
+  .wrapper {
+    bottom: 59px;
+  }
+}
